--- a/css/style.css
+++ b/css/style.css
@@ -794,7 +794,7 @@ a:hover {
 }
 
 .work-content {
-  padding: 0rem 6% 1rem 5%;
+  padding: 0rem 2% 1rem 2%;
 }
 
 .work-content .w-more {
@@ -1271,5 +1271,142 @@ footer .credits a {
 @media (max-width: 768px) {
   .back-to-top {
     bottom: 15px;
+  }
+}
+.slider {
+  width: 700px;
+  height: 300px;
+  margin: 50px auto;
+  border: 1px solid;
+  overflow: hidden;
+}
+.slides {
+  width: 400%;
+  height: 100%;
+  -webkit-animation: slide 16s infinite;
+  -moz-animation: slide 16s infinite;
+  animation: slide 16s infinite;
+}
+.slider-1,
+.slider-2,
+.slider-3,
+.slider-4 {
+  width: 25%;
+  height: 100%;
+  float: right;
+}
+.slider-1 {
+  background: #222;
+}
+.slider-2 {
+  background: #444;
+}
+.slider-3 {
+  background: #666;
+}
+.slider-4 {
+  background: #888;
+}
+
+@-webkit-keyframes slide {
+  0%,
+  100% {
+    margin-left: 0%;
+  }
+
+  12% {
+    margin-left: 0%;
+  }
+
+  24% {
+    margin-left: -100%;
+  }
+
+  36% {
+    margin-left: -100%;
+  }
+
+  48% {
+    margin-left: -200%;
+  }
+
+  60% {
+    margin-left: -200%;
+  }
+
+  72% {
+    margin-left: -300%;
+  }
+
+  84% {
+    margin-left: -300%;
+  }
+}
+@-moz-keyframes slide {
+  0%,
+  100% {
+    margin-left: 0%;
+  }
+
+  12% {
+    margin-left: 0%;
+  }
+
+  24% {
+    margin-left: -100%;
+  }
+
+  36% {
+    margin-left: -100%;
+  }
+
+  48% {
+    margin-left: -200%;
+  }
+
+  60% {
+    margin-left: -200%;
+  }
+
+  72% {
+    margin-left: -300%;
+  }
+
+  84% {
+    margin-left: -300%;
+  }
+}
+@keyframes slide {
+  0%,
+  100% {
+    margin-left: 0%;
+  }
+
+  12% {
+    margin-left: 0%;
+  }
+
+  24% {
+    margin-left: -100%;
+  }
+
+  36% {
+    margin-left: -100%;
+  }
+
+  48% {
+    margin-left: -200%;
+  }
+
+  60% {
+    margin-left: -200%;
+  }
+
+  72% {
+    margin-left: -300%;
+  }
+
+  84% {
+    margin-left: -300%;
   }
 }
